--- a/src/COMPONENT/dashBoard.css
+++ b/src/COMPONENT/dashBoard.css
@@ -32,6 +32,10 @@ body {
 
     height: 100vh;
 }
+.report {
+    width: 50%;
+    display: inline-block;
+}
 
 .box {
     background-color: var(--box-bg);
